@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 
 #
 # Licensed to the Apache Software Foundation (ASF) under one or more
@@ -36,7 +36,7 @@ then
 
 
 
-    useSandbox=`cat ${KYLIN_HOME}/conf/kylin.properties | grep 'kylin.sandbox' | awk -F '=' '{print $2}'`
+    useSandbox=`sh ${KYLIN_HOME}/bin/get-properties.sh kylin.sandbox`
     spring_profile="default"
     if [ "$useSandbox" = "true" ]
         then spring_profile="sandbox"
@@ -52,9 +52,11 @@ then
 
     export HBASE_CLASSPATH_PREFIX=${tomcat_root}/bin/bootstrap.jar:${tomcat_root}/bin/tomcat-juli.jar:${tomcat_root}/lib/*:$HBASE_CLASSPATH_PREFIX
     export HBASE_CLASSPATH=$hive_dependency:${HBASE_CLASSPATH}
-    export JAVA_OPTS="-Xms2048M -Xmx2048M -XX:MaxPermSize=512m"
+    
+    #debug if encounter NoClassDefError
+    #hbase classpath
 
-    hbase ${JAVA_OPTS} ${KYLIN_EXTRA_START_OPTS} \
+    hbase ${KYLIN_EXTRA_START_OPTS} \
     -Djava.util.logging.config.file=${tomcat_root}/conf/logging.properties \
     -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager \
     -Dorg.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH=true \
